[NOID] various changes for 4.4